--- a/galeriadefotos.html
+++ b/galeriadefotos.html
@@ -69,7 +69,7 @@
         </div>
     </main>
 
-    <script src="data/galeriadefotos.js"></script>
+    <script type="module" src="data/galeriadefotos.js"></script>
 
     <footer>
         <div class="containers">
