--- a/galeriadefotos.html
+++ b/galeriadefotos.html
@@ -19,11 +19,11 @@
 
     <div class="gallery-galeria">
         <div class="gallery-container-galeria">
-            <img class="gallery-item gallery-item-1" img src="imagenes/galeria13.png" data-index="1" />
-            <img class="gallery-item gallery-item-2" img src="imagenes/galeria14.png" data-index="2" />
-            <img class="gallery-item gallery-item-3" img src="imagenes/galeria15.png" data-index="3" />
-            <img class="gallery-item gallery-item-4" img src="imagenes/galeria16.png" data-index="4" />
-            <img class="gallery-item gallery-item-5" img src="imagenes/galeria17.png" data-index="5" />
+            <img class="gallery-item gallery-item-1"  src="imagenes/galeria13.png" data-index="1" />
+            <img class="gallery-item gallery-item-2"  src="imagenes/galeria14.png" data-index="2" />
+            <img class="gallery-item gallery-item-3"  src="imagenes/galeria15.png" data-index="3" />
+            <img class="gallery-item gallery-item-4"  src="imagenes/galeria16.png" data-index="4" />
+            <img class="gallery-item gallery-item-5"  src="imagenes/galeria17.png" data-index="5" />
         </div>
         <div class="gallery-controls"></div>
     </div>
